Add new verison of module

--- a/cloudpayments/language/en-GB/en-GB.plg_vmpayment_cloudpayments.ini
+++ b/cloudpayments/language/en-GB/en-GB.plg_vmpayment_cloudpayments.ini
@@ -30,3 +30,5 @@ COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_2="2 — Simplified taxation 
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_3="3 — Single tax on imputed earnings"
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_4="4 — Single agricultural tax"
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_5="5 — Patent taxation system"
+COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_SHIPPING_CODE_IKPU="Shipping code IKPU"
+COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_SHIPPING_PACKAGE_CODE="Shipping package code"
