--- a/cloudpayments/language/ru-RU/ru-RU.plg_vmpayment_cloudpayments.ini
+++ b/cloudpayments/language/ru-RU/ru-RU.plg_vmpayment_cloudpayments.ini
@@ -30,3 +30,5 @@ COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_2="2 — Упрощенная
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_3="3 — Единый налог на вмененный доход"
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_4="4 — Единый сельскохозяйственный налог"
 COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_TAX_SYSTEM_5="5 — Патентная система налогообложения"
+COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_SHIPPING_CODE_IKPU="Код ИКПУ доставки"
+COM_VIRTUEMART_PLUGIN_CLOUDPAYMENTS_XML_SHIPPING_PACKAGE_CODE="Код упаковки доставки"
